[package]
name = "igd"
version = "0.7.0"
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
description = "Internet Gateway Protocol client"
homepage = "https://github.com/sbstp/rust-igd"
repository = "https://github.com/sbstp/rust-igd"
documentation = "https://docs.rs/igd/"
readme = "README.md"
keywords = ["igd", "upnp"]
license = "MIT"
edition = "2018"

[dependencies]
regex = "0.2"
xml-rs = "0.7"
xmltree = "0.7"
rand = "0.4"
futures = "0.1"
tokio = "0.1.15"
tokio-retry = "0.2.0"
mime = "0.3.13"
hyper = "0.12"
failure = "0.1.5"
